# rplayer

./: .gitignore  README.md
src/: mind.txt  project_architecture.txt
src/pysimpleclient/: pysimpleclient.py  pysimpleserver.py
src/research/: udb_bc_sender.py
src/rplayer_qtclient/: CMakeLists.txt  mainwindow.h  mainwindow.ui
src/rplayer_server/android/: .classpath  .project  AndroidManifest.xml
src/rplayer_server/android/res/values/: strings.xml
src/rplayer_server/android/src/rplayer/server/android/: rMediaPlayerImpl.java  rplayer.java
src/rplayer_server/base/src/rplayer/server/base/: rGuiInterface.java  rMediaPlayer.java  rMediaPlayerEventHandlerInterface.java  rMediaScheduler.java  rScheduleItemBase.java  rScheduleItemGroup.java  rScheduleItemSimpleFS.java  rSchedulerClient.java  rServerBase.java  rTracer.java
src/rplayer_server/generic/: .classpath  .project
src/rplayer_server/generic/src/rplayer/server/generic/: rMediaPlayerImpl.java  rplayer.java
